--- a/quiz.html
+++ b/quiz.html
@@ -15,16 +15,15 @@
                 <button class="btn">Answer 2</button>
                 <button class="btn">Answer 3</button>
                 <button class="btn">Answer 4</button>
-                <button class="btn"></button>
             </div>
         </div>
         <div class="controls">
-            <button id="start-btn" class="start-btn btn">Start</button>
+            <button id="play-btn" class="play-btn btn">Play</button>
             <button id="next-btn" class="next-btn btn hide">Next</button>
         </div>
     </div>
-    <script>
-        src="quiz.js"
-    </script>
+
+    <script src=quiz.js></script>
+
 </body>
 </html>
